 * #1091: Fix for the "config generate" action generating invalid configuration when upgrading
   deprecated command hooks.
 * #1093: Fix for the LVM hook erroring when the "--dry-run" flag is used.
 * #1094: Fix incorrect documentation about customizing Borg exit codes:
   https://torsion.org/borgmatic/docs/how-to/customize-warnings-and-errors/
 * Add support for Borg 2's "s3:" and "b2:" repository URLs, so you can backup to S3 or B2 cloud
   storage services even without using Rclone.

2.0.5
 * #1033: Add a "password_transport" option to the MariaDB and MySQL database hooks for customizing
   how borgmatic transmits passwords to the database client.
 * #1078: Add "keep_3monthly" and "keep_13weekly" options for customizing "prune" action archive
   retention.
 * #1078: Add a "use_chunks_archive" option for controlling whether Borg uses its chunks cache
   directory.
 * #1078: For the "compact" action, pass "--dry-run" through to Borg.
 * #1085: Fix a regression in which the default monitoring verbosity is 0 (warnings only) instead of
   1 (info about steps borgmatic is taking). This prevented logs from showing up in monitoring
   services like Healthchecks unless you had an explicit monitoring verbosity set.
 * Move Mastodon social hosting from Fosstodon to FLOSS.social: https://floss.social/@borgmatic
 * The borgmatic project no longer accepts pull requests on GitHub. But see
   https://torsion.org/borgmatic/#contributing for how you can still submit pull requests. You can
   even use your GitHub account to login.

2.0.4
 * #1072: Fix path rewriting for non-root patterns in the ZFS, Btrfs, and LVM hooks.
 * #1073: Clarify the documentation about when an "after: error" command hook runs and how it
   differs from other hooks:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #1075: Fix an incorrect warning about Borg placeholders being unsupported in a command hook.